[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cxl"
dynamic = ["version"]
authors = [
  {name = "Amin Oudrhiri", email = "amin.oudrihri@kcl.ac.uk"},
]
requires-python = ">= 3.10"
dependencies = [
    "numpy",
    "pandas",
    "numba",
    "matplotlib",
    "numba_stats",
    "scipy",
    "scikit-learn",
    "torch",
]
readme = "README.md"
description = "A unified library for causal discovery"
license = {text = "MIT License"}